syntax = "proto3";
package dualitylabs.duality.dex;

import "gogoproto/gogo.proto";
import "dualitylabs/duality/dex/params.proto";
import "dualitylabs/duality/dex/limit_order_tranche_user.proto";
import "dualitylabs/duality/dex/limit_order_tranche.proto";
import "dualitylabs/duality/dex/tick_liquidity.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/duality-labs/duality/x/dex/types";

// GenesisState defines the dex module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated TickLiquidity tickLiquidityList = 2 [(gogoproto.nullable) = false];
  repeated LimitOrderTranche inactiveLimitOrderTrancheList = 6 [(gogoproto.nullable) = false];
  repeated LimitOrderTrancheUser limitOrderTrancheUserList = 7 [(gogoproto.nullable) = false];


  // this line is used by starport scaffolding # genesis/proto/state
}
